ARROW-4370: [Python] Support conversion of List[Bool] to pandas

Author: Uwe L. Korn <uwelk@xhochy.com>

Closes #3593 from xhochy/ARROW-4370 and squashes the following commits:

ce6c197ca <Uwe L. Korn> ARROW-4370:  Support conversion of List to pandas